Wed Oct 11 00:23:31 2000  George Lebl <jirka@5z.com>

	* launcher.[ch], menu.c:  Add revert button to desktop entry property
	  editors, and use an enum instead of button numbers to avoid future
	  fuckups.  Again some completely random cosmetic cleanup as well.

Sat Oct 07 23:44:48 2000  George Lebl <jirka@5z.com>

	* applet-widget.c, applet.c, panel-util.[ch], launcher.[ch],
	  menu.[ch], menu-properties.[ch], panel_config.c:  General cleanup
	  and some const-ization of things.  But mostly cosmetic things.

	* panel_config.c, launcher.c, menu.c, menu-properties.c:  Make sure
	  a widget is focused after a dialog is shown

	* menu.c: Always make the properties item sensitive, but if the
	  item is not writable make the entire dialog unsensitive, so this
	  way the user can inspect the info in the dentry, but not change it

Sat Oct 07 21:59:28 2000  George Lebl <jirka@5z.com>

	* gnome-run.c: add ability to launch certain urls
	  (http://,https://,gopher:// and ftp://) from the run box

Sat Oct 07 21:03:40 2000  George Lebl <jirka@5z.com>

	* launcher.c, menu.c, panel-util.[ch]: cleanup, minor leak fixes,
	  some hack-explanatory comments

	* menu.c: replace the property-box with a normal dialog that
	  has immediate effect.  This is the last property dialog

Sat Sep 30 00:33:16 2000  George Lebl <jirka@5z.com>

	* menu-properties.c, menu.[ch]: fixup the menu properties to do
	  immediate update and use a structure instead of the object
	  data for some nicer code.

	* drawer.c: remove unused var

	* launcher.c: make dialog creation not seg and add the _set_close
	  call to the dialog (to false)

2000-09-29  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* logout.c (logout): 
	* launcher.c (launch): pass a GtkWidget

	* extern.c (extern_unref): this function returns void

	* drawer.c (drawer_click): don't case to a BaseP
	(load_drawer_applet): only autoshow if it is a BaseP

	* drawer-widget.h: update API to use GtkWidgets
