@@ -1,3 +1,8 @@
+Wed Oct 11 18:09:40 2000  George Lebl <jirka@5z.com>
+
+	* xstuff.c: don't assume return from XGetWMHints is allways non-null,
+	  though it's really overly paranoid.
+
 Wed Oct 11 00:23:31 2000  George Lebl <jirka@5z.com>
 
 	* launcher.[ch], menu.c:  Add revert button to desktop entry property
